"About Section and Menu Itesm Section"

--- a/Front End/index.html
+++ b/Front End/index.html
@@ -39,6 +39,107 @@
             <img src="img/hero.png" alt="">
         </div>
     </section>
+    <!-- container -->
+    <section class="container">
+        <div class="container-box">
+            <img src="img/c1.png" alt="">
+            <h3>11:00 am - 8:00 pm</h3>
+            <a href="">Working Hours</a>
+        </div>
+
+        <div class="container-box">
+            <img src="img/c2.png" alt="">
+            <h3>Honey Spring 555</h3>
+            <a href="">Get Directions</a>
+        </div>
+
+        <div class="container-box">
+            <img src="img/c3.png" alt="">
+            <h3>555 111-3434344</h3>
+            <a href="">Call Us Now</a>
+        </div>
+    </section>
+    <!-- about -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png" alt="">
+        </div>
+        <div class="about-text">
+            <h2>Living Well begins <br> with eating well</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, aperiam nisi. Ea, ut consectetur voluptatibus dolores dolor sapiente magni id eligendi ipsam, mollitia omnis rem numquam illo velit! Eius consequatur nesciunt architecto quidem dolorum dolore debitis odit aspernatur hic magni minus velit est magnam quod, enim, beatae deserunt sequi qui porro amet odio suscipit. Dolorem, odit.</p>
+            <a href="" class="btn">Explore Menu <i class='bx bxs-right-arrow' ></i></a>
+        </div>
+    </section>
+    <!-- our shop -->
+    <section class="shop" id="shop">
+        <div class="middle-text">
+            <h4>Our Shop</h4>
+            <h2>Lets Check Popular Products</h3>
+        </div>
+        <div class="shop-content">
+            <div class="row">
+                <img src="img/p1.png" alt="">
+                <h3>Blueberry Honey</h3>
+                <p>It is a long established fact that a reader</p>
+                <div class="in-text">
+                    <div class="price"><h6>$21.00</h6></div>
+                    <div class="s-btnn">
+                        <a href="#">Order</a>
+                    </div>
+                </div>
+                <div class="top-icon">
+                    <a href=""><i class="bx bx-heart"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="img/p2.png" alt="">
+                <h3>Blueberry Honey</h3>
+                <p>It is a long established fact that a reader</p>
+                <div class="in-text">
+                    <div class="price"><h6>$21.00</h6></div>
+                    <div class="s-btnn">
+                        <a href="">Order</a>
+                    </div>
+                </div>
+                <div class="top-icon">
+                    <a href=""><i class="bx bx-heart"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="img/p3.png" alt="">
+                <h3>Blueberry Honey</h3>
+                <p>It is a long established fact that a reader</p>
+                <div class="in-text">
+                    <div class="price">
+                        <h6>$21.00</h6>
+                    </div>
+                    <div class="s-btnn">
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="top-icon">
+                    <a href=""><i class="bx bx-heart"></i></a>
+                </div>
+            </div>
+            <!-- <div class="row">
+                <img src="img/p3.png" alt="">
+                <h3>Blueberry Honey</h3>
+                <p>It is a long established fact that a reader</p>
+                <div class="in-text">
+                    <div class="price"><h6>$21.00</h6></div>
+                    <div class="s-btnn">
+                        <a href="">Order</a>
+                    </div>
+                </div>
+                <div class="top-icon">
+                    <a href=""><i class="bx bx-heart"></i></a>
+                </div>
+            </div> -->
+        </div>
+        <div class="row-btn">
+            <a href="" class="btn">All Products <i class='bx bxs-right-arrow' ></i></a>
+        </div>
+    </section>
     <!-- link to js -->
     <script src="js/script.js"></script>
 </body>
